
fix: base.twig: no content was shown if enable_shop == false
change: init.php: session is now only started when enable_module_customer == true, not needed if this is false
renamed class item to items
added new field for items: weight
changed itemadmin-forms, textcat-forms to use purecss framework

2.0.6
text from textcats can now be deleted, haaseit/toolbox 1.2.2 is now required.

2.0.5
itemgroups are now back, template is still very basic
fixed wrong include paths in some files in web/_misc directory
fixed vat_disable not working

2.0.3 auf 2.0.4dev
config.shop.php changed to config.shop.yml
config.core.php changed to config.core.yml
config.countries.php changed to config.countries.yml
config.customer.php changed to config.customer.yml
config.scrts.php changed to config.scrts.yml
added config parameters enable_module_shop, enable_module_customer and enabled processing of them
removed function debug() from functions.misc.inc.php and created a similar function in the class Tools
  changed the code to reflect this